# quill-ai

./: .cursorrules  .editorconfig  .env.example  .factoryignore  .gitignore  .markdownlint.json  .prompt.api-docs.md  .prompt.deps-audit.md  .prompt.md  .prompt.refactor.md  .prompt.smoke-tests.md  .prompt.tests.md  .ui-standards-baseline.json  AGENTS.md  APEX_INTEGRATION_SUMMARY.md  APEX_INTEGRATION_TESTING.md  ARCHITECTURE.md  AUDIT_2026_04_12.md  BRAIN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETE_GOOGLE_OAUTH_GUIDE.md  CONTRIBUTING.md  DEMO_CAPTURE_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DESIGN.md  DEV_RUNBOOK.md  EXECUTION_PLAN_QUILL_PARITY.md  EXECUTION_SERVICE_TESTING_QUICK_REF.md  GEMINI_COST_OPTIMIZATION.md  IDENTITY.md  LICENSE  MULTI_AGENT_INTEGRATION.md  OPTIMIZATION_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  REMEDIATION_PLAN_30D.md  REPOSITORY_STRUCTURE_AUDIT.json  REPOSITORY_STRUCTURE_AUDIT.md  (+27 more)
.agents/: development.md  memory-bank-instructions.md
.githooks/: pre-commit
.github/: pull_request_template.md
.husky/: pre-commit
.kilocode/: agent-config.md
.openclaw/: workspace-state.json
cli/: index.mjs  package.json
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: GOOGLE_OAUTH_SETUP.md  PERFORMANCE.md  RUNTIME_API_SPEC.md
examples/: prompt.api-docs.json  prompt.deps-audit.json  prompt.organize.json  prompt.refactor.json  prompt.smoke-tests.json  prompt.tests.json
src/: proxy.ts  (+1 more)
(+303 files in other folders)
