[package]
name = "quill-desktop"
version = "1.0.0"
edition = "2021"
description = "Quill AI desktop app"
authors = ["Quill AI"]

[lib]
name = "quill_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
